# sogangcomputerclub.org

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  DATABASE_MIGRATION_RECORD.md  DEPLOYMENT_OPTIONS.md  Dockerfile  INFRASTRUCTURE_EVOLUTION_RECORD.md  MEMO_SAVING_FIX_AND_PORT_FORWARDING_SETUP.md  README.md  backup-database.sh  certbot.sh  docker-compose.yml  nginx-entrypoint.sh  nginx-sgcc-memo.conf  nginx-sogangcomputerclub.conf  nginx-test.conf  nginx.conf  nginx.sh  package-lock.json  pyproject.toml  requirements.txt  restore-database.sh
.github/workflows/: backend-ci.yml  deploy-production.yml  deploy-staging.yml  docker-build.yml  frontend-ci.yml  integration-tests.yml  manual-rollback.yml  security-scan.yml
app/: main.py  services.py
backups/: README.md
frontend/: +layout.svelte  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vitest.config.ts
frontend/src/: app.css  vitest-env.d.ts
k8s/: configmap-secret.yaml.example  configmap.yaml  deploy-production.sh  deploy-staging.sh  deploy.sh  fastapi-production.yaml  fastapi-staging.yaml  fastapi.yaml  frontend-production.yaml  frontend-staging.yaml  frontend.yaml  ingress.yaml  kafka.yaml  mariadb-secret.yaml.example  mariadb.yaml  namespace-local.yaml  namespace-staging.yaml  namespace.yaml  redis.yaml  rollback.sh
scripts/: init_test_db.py
tests/: conftest.py  test_health.py  test_memos.py
tests/integration/: test_api_e2e.py  test_database.py  test_docker_services.py  test_kafka.py  test_redis.py
tests/load/: locustfile.py  performance_test.py
(+57 files in other folders)
