[project]
name = "sogangcomputerclub-org"
version = "0.1.0"
description = "This is the backend package of sogangcomputerclub.org"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka==0.11.0",
    "aiomysql==0.2.0",
    "aioredis==2.0.1",
    "aiosqlite==0.20.0",
    "fastapi==0.115.2",
    "greenlet>=3.0.0",
    "icmplib>=3.0.4",
    "pydantic==2.9.2",
    "python-json-logger==2.0.7",
    "redis==5.1.0",
    "sqlalchemy==2.0.32",
    "uvicorn==0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
